fixed workflows