@@ -69,6 +69,13 @@
       <artifactId>commons-io</artifactId>
       <version>2.15.1</version>
     </dependency>
+    <dependency>
+  		<groupId>org.projectlombok</groupId>
+  		<artifactId>lombok</artifactId>
+  		<version>1.18.32</version>
+  		<scope>provided</scope>
+	</dependency>
+
 
   </dependencies>
 
@@ -77,13 +84,17 @@
 
       <!-- Maven Compiler Plugin -->
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.11.0</version>
-        <configuration>
-          <source>17</source>
-          <target>17</target>
-        </configuration>
+      	<groupId>org.apache.maven.plugins</groupId>
+      	<artifactId>maven-compiler-plugin</artifactId>
+      	<version>3.11.0</version>
+      	<configuration>
+        	<source>17</source>
+        	<target>17</target>
+        	<compilerArgs>
+          		<arg>--add-exports</arg>
+          		<arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+        	</compilerArgs>
+      	</configuration>
       </plugin>
 
       <!-- Maven Surefire Plugin (important for TestNG) -->
